--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 
@@ -40,6 +41,7 @@ dependencies {
     def room_version = "2.4.3"
 
 
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.2'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation "androidx.room:room-runtime:$room_version"
