--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 
@@ -36,6 +37,10 @@ android {
 
 dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.google.firebase:firebase-firestore:24.4.2'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def nav_version = "2.5.3"
     def room_version = "2.4.3"
 
@@ -51,6 +56,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'
     implementation 'com.google.android.gms:play-services-base:18.1.0'
+    implementation 'com.google.android.gms:play-services-auth:20.4.1'
     implementation 'androidx.navigation:navigation-fragment:2.5.3'
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation "androidx.navigation:navigation-fragment:$nav_version"
@@ -58,4 +64,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
