--- a/local.properties
+++ b/local.properties
@@ -5,5 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Dec 15 11:04:14 CET 2022
-sdk.dir=C\:\\Users\\danie\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\David\\AppData\\Local\\Android\\Sdk
 MAPS_API_KEY=AIzaSyBFB-yRv-o6lxXh2P5Ay2nTfb-EE_OAfUk
