--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,4 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-sdk.dir=C\:\\Users\\Alisi\\AppData\\Local\\Android\\Sdk
-MAPS_API_KEY=AIzaSyBFB-yRv-o6lxXh2P5Ay2nTfb-EE_OAfUk
+sdk.dir=C\:\\Users\\David\\AppData\\Local\\Android\\Sdk
